updated to remove " from description per vinu

--- a/_posts/2014-06-25-Canva.md
+++ b/_posts/2014-06-25-Canva.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Product Spotlight – Graphic Design for Social Media and Blogs with Canva
-description: “Canva claims to be “fun, free and simple to use”. We decided to put this claim to test in our Product Spotlight for this week. ”
+description: Canva claims to be fun, free and simple to use. We decided to put this claim to test in our Product Spotlight for this week.
 tags: [blog, social media, marketing, tools, visual social media, content marketing, social media management, SEO, Canva, visual, design, creative, social, free] 
 comments: true
 authors: [raj]
@@ -16,7 +16,7 @@ image:
 <figcaption>Piecing Together Canva</figcaption>
 </figure>
 
-Following up on our [Product Spotlight - Social Media Management with Over-Graph]( http://blog.justshareapp.com/Over-Graph/), we look at another exciting product  - **Canva**.
+Following up on our [Product Spotlight - Social Media Management with Over-Graph](http://blog.justshareapp.com/Over-Graph/), we look at another exciting product  - **Canva**.
 
 Canva brings together a bunch of elements from formats to **fonts** to **images** to **layouts** to **photo editing** to **collaboration**, to provide a comprehensive design capability for a variety of **web and print needs**. Whether you want to design a facebook post Or an amazing brochure – Canva has it all put together for you.
 
